--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://res.cloudinary.com/chuksmbanaso/image/upload/v1667994904/media/images_gltcon.jpg" />
+    <link rel="icon" href="https://res.cloudinary.com/chuksmbanaso/image/upload/v1668158691/media/logo_ag0drj.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
